# T-bank_NLP_

./: .dockerignore  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  example.env  llm_relevance_test_results.json  pyproject.toml  requirements.txt
data/finder/: README.md  dataset.json
eval/: README.md
eval/outputs/: results.parquet  summary.json
eval/src/: main.py
experiments/: financial_qa_kaggle_dataset.ipynb  finder_dataset.ipynb  resbeir_dataset.ipynb  russian_financial_news_dataset.ipynb
experiments/generation/: evaluating_result.json  evaluating_sample.txt
experiments/react_router/: evaluate_metrics.ipynb
frontend/: DESIGN.md  Dockerfile  INSTALL.md  README.md  SETUP.md  index.html  install-node.sh  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnswerCard.tsx  Footer.tsx  Header.tsx  LoadingSpinner.tsx  SearchBar.tsx
frontend/src/: App.tsx  index.css
frontend/types/: index.ts
notebooks/: test_llm_client.ipynb
src/eval/: README.md  __init__.py  eval.ipynb  eval_recall.ipynb  eval_results_multi_k.json  eval_retrieval.py  eval_with_llm.ipynb  load_data.py  load_data_to_qdrant.ipynb  metrics.py  report.txt  test_ret.py
src/tplexity/: __init__.py  app.py  config.py
streamlit_app/: .dockerignore  .gitignore  Dockerfile  Home.py  QUICKSTART.md  README.md  app.py  requirements.txt  run.sh  start.bat  start.sh
streamlit_app/.streamlit/: config.toml  secrets.toml.example
streamlit_app/pages/: 1_💬_Chat.py  (+4 more)
tests/: test_generation_service.ipynb  test_llm_client.ipynb  test_retriever_service.ipynb
(+91 files in other folders)
