[project]
name = "tplexity"
version = "0.1.0"
description = ""
authors = [
    {name = "avolxn",email = "vlad.eldashov2303@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "tplexity", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pre-commit = "^3.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C", "UP", "S"]
ignore = ["E501", "E741"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
